[add] first blog post, [change] page configuration

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: page
 title: Ömer Faruk AKDAĞ
-subtitle: Subtitle
-use-site-title: true
+subtitle: Software Developer
 lang: tr
 ref: index-page
 ---
